--- a/extra/package/ddraw.ini
+++ b/extra/package/ddraw.ini
@@ -6,6 +6,7 @@ ExtraSaveSlots=1
 FemaleDialogMsgs=2
 OverrideArtCacheSize=1
 UseFileSystemOverride=1
+ProcessorIdle=1
 
 [Scripts]
 IniConfigFolder=mods
